[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprite/medievalRTS_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Script/base.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.8059, 23.9077 )

[node name="Sprite" type="Sprite"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 384, 0, 52, 48 )
script = ExtResource( 2 )

[node name="Drag" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drag"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
margin_bottom = -26.0
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="tree_entered" from="." to="." method="_on_Sprite_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_Sprite_tree_exiting"]
[connection signal="input_event" from="Drag" to="." method="_on_Drag_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
